[gd_scene load_steps=5 format=3 uid="uid://68551cgidu0t"]

[ext_resource type="Texture2D" uid="uid://f2ym4ophxerw" path="res://Assets/CommonObjects/locked-wood-door.png" id="1"]
[ext_resource type="Script" path="res://Scripts/LockedDoor.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://dhjg2guqpy3q3" path="res://Assets/Sound/DoorLock.mp3" id="3"]

[sub_resource type="RectangleShape2D" id="1"]

[node name="LockedDoor" type="Area2D"]
collision_layer = 2048
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
texture = ExtResource("1")

[node name="SoundUnlockDoor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
volume_db = 10.0

[node name="SoundPlayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_LockedDoor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LockedDoor_body_exited"]
[connection signal="timeout" from="SoundPlayTimer" to="." method="_on_SoundPlayTimer_timeout"]
